test/good/arrays/spread05.px

print [...['a']*3]
print [...(false ? [] : [true])]
