test/bad/basic/cond03.px

(3 == 3 ? "x" : 0 < 0 ? "y" : "z") [0] = 'a'
